--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,34 @@ body {
 .display-flex {
     display: flex;
 }
+
+/* header styles start */
+
+header {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+    margin: 87px auto 40px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-list {
+    gap: 34px;
+}
+
+.nav-items {
+    list-style: none;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.brand {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
